--- a/solutions/microsvc_platforms_problem/index.asciidoc
+++ b/solutions/microsvc_platforms_problem/index.asciidoc
@@ -8,13 +8,12 @@ toc::[]
 
 == Microservice Platforms Introduction
 === Context & Problem
-==== Overview
 
 Microservice orchestration is the automatic process of managing or scheduling the work of individual microservices of an application within a cluster. The platform provides an automated process of managing, scaling, and maintaining microservices of an application.
 The container orchestration platform Kubernetes is the current de facto standard (Docker swarm and others are nowadays neglectable compared to Kubernetes). Containers are units that packages up code and all its dependencies like libraries so that the application can be started quickly and runs reliably, regardless of the infrastructure.
 https://avinetworks.com/glossary/container-orchestration/[Container orchestration] tools automate the management of various tasks that software teams encounter in a container’s lifecycle, including the following: Container deployment, scaling, load balancing and traffic routing, network and container configuration, allocation of resources, gathering of insights, provisioning, scheduling, distribution of containers to physical hosts, service discovery, health monitoring, cluster management (Link).
 
-==== Introduction to Kubernetes
+=== Introduction to Kubernetes
 
 To achieve the above goals a rough understanding of the Kubernetes structure is important.
 The control plane is responsible for managing your container workload. All action in Kubernetes goes through the api-server which receives and executes commands. The workload is defined by the target state you define in so called objects. A https://stackoverflow.com/questions/52309496/difference-between-kubernetes-objects-and-resources[Kubernetes object] is a "record of intent" - once you create the object, the Kubernetes system will constantly work to ensure that object exists. Those definitions can exist in manifest files, or be obtained from the api-server.
@@ -30,7 +29,7 @@ The picture below summarizes the major aspects:
 
 image::problem_context.png[alt=Container orchestration Problem Context,width=925, height=666]
 
-==== Standard Problems
+=== Standard Problems
 
 This chapter focus at problems that are unique due to the microservice focus. Links to documentation of microservice agnostic parts are given below. An example for a problem with microservice specifics and agnostic parts is provisioning. Creating the orchestration infrastructure is conceptually not different from other resources that are created with a pipeline. However, the additional container build step is specific to microservices based on a container orchestration platform.
 
@@ -111,17 +110,27 @@ Standard services on application level include:
 ** Secrets
 --
 
-The following standard problems regarding the resources to be deployed will be addressed in subsequent paragraphs:
+The following standard problems regarding *the applications to be deployed* will be addressed in subsequent paragraphs:
 
-* Deployment
+* Designing
 +
 --
-Deploying containers comes with the following specifics: building of containers, storing them in a registry and proper configuration.
+Mutiple options exist how many containers an application consists of. In the simplest case persistence is achieved by persistent volumes but also hosting entire databases on Kubernetes is possible. 
+--
+* Provisioning
++
+--
+Container images need to be built, stored in a registry and deployed. Additional challenges during built are for instance triggering dependent images if a base image is affected or enforcing quality gates such as security scans as part of the build pipelines. Deployments might even go beyond Kubernetes if you have for instance a rolling update with database changes.
 --
 * Compliance
 +
 --
-Compliance affects the building of containers and the running solutions such as restricting communication between containers.
+Compliance affects the building of containers and the running application such as restricting communication between containers.
+--
+* Configuration
++
+--
+Containers need to be configured. An additional challenge might therefore to inject environment specific values.
 --
 * Monitoring
 +
