--- a/solutions/provisioning_azure_devops/index.asciidoc
+++ b/solutions/provisioning_azure_devops/index.asciidoc
@@ -7,6 +7,8 @@ toc::[]
 :idprefix:
 :idseparator: -
 
+image::ms_guild_logo.png[MS Guild Logo, width=360, height=115, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
+
 == Provisioning Solution Azure Native
 === Overview
 
