--- a/solutions/endusermgmt_platforms/index.asciidoc
+++ b/solutions/endusermgmt_platforms/index.asciidoc
@@ -10,6 +10,8 @@ toc::[]
 == Enduser Management Platforms
 === Azure
 
+image::ms_guild_logo.png[MS Guild Logo, width=160, height=75, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
+
 This chapter lists major features/ concrete services for enduser management of the Azure platform. This architecture pattern builds on the general problem description for enduser management. A detailed discussion of services is part of the solution design in the subsequent chapters. Major features for the previously described areas are as follows:
 
 * Enduser managment
