--- a/solutions/monitoring_platforms/index.asciidoc
+++ b/solutions/monitoring_platforms/index.asciidoc
@@ -10,6 +10,8 @@ toc::[]
 == Monitoring Platforms
 === Azure
 
+image::ms_guild_logo.png[MS Guild Logo, width=160, height=75, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
+
 This chapter lists major features/ concrete services for monitoring of the Azure platform. This architecture pattern builds on the general problem description for monitoring. A detailed discussion of services is part of the solution design in the subsequent chapters. Major features per stage of the monitoring pipeline are as follows:
 
 * *Data Sources/ Instrumention*
