--- a/solutions/provisioning_platforms/index.asciidoc
+++ b/solutions/provisioning_platforms/index.asciidoc
@@ -11,6 +11,8 @@ toc::[]
 
 === Azure
 
+image::ms_guild_logo.png[MS Guild Logo, width=160, height=75, align=right, link="https://forms.office.com/Pages/ResponsePage.aspx?id=Wq6idgCfa0-V7V0z13xNYal7m2EdcFdNsyBBMUiro4NUNllHQTlPNU9QV1JRRjk3TTAwVUJCNThTRSQlQCN0PWcu"]
+
 ==== Automation code
 
 ===== Modelling Environments
